UI public pages

--- a/recruit-gui/src/app/contact/contact.component.html
+++ b/recruit-gui/src/app/contact/contact.component.html
@@ -8,7 +8,7 @@
    		</div>
    	</div>
    	 <div class="contact-div">
-		  <table>
+		  <table class="non-mobile-only-element">
 			<tr>
 				<th>{{ "arenella-contact-company-name" | translate }}</th>
 				<td>Arrenella-ICT</td>
@@ -25,6 +25,29 @@
 				<th>{{ "arenella-contact-company-registration-email" | translate }}</th>
 				<td>admin&#64;arenella-ict.com</td>
 			</tr>
-		</table>     
+		</table>    
+		
+		<div class="mobile-only-element contact-table">
+			<div>
+				<h5>{{ "arenella-contact-company-name" | translate }}</h5>
+				<p>Arrenella-ICT</p>
+			</div>
+			
+			<div>
+				<h5>{{ "arenella-contact-company-address" | translate }}</h5>
+				<p>Julianastraat 16 <br>Noordwijk 2202KD, <br>Nederland</p>
+			</div>
+			
+			<div>
+				<h5>{{ "arenella-contact-company-registration-number" | translate }}</h5>
+				<p>61982156</p>
+			</div>
+			
+			<div>
+				<h5>{{ "arenella-contact-company-registration-email" | translate }}</h5>
+				<p>admin&#64;arenella-ict.com-ICT</p>
+			</div>
+		
+		</div> 
 	</div>
 </div>
