--- a/recruit-gui/src/app/faq/faq.component.html
+++ b/recruit-gui/src/app/faq/faq.component.html
@@ -8,7 +8,7 @@
             	 <div>
             	 	<div  class="subject-header">
             	 		<h1>FAQ's</h1>
-            	 		<h5>{{ "arenella-faqs-header" | translate }}</h5>
+            	 		<h5 class="non-mobile-only-element">{{ "arenella-faqs-header" | translate }}</h5>
             	 	</div>
             	 	<div class="faqs">
 	            	 	<div class="faq">
