--- a/recruit-gui/src/app/home/home.component.html
+++ b/recruit-gui/src/app/home/home.component.html
@@ -80,24 +80,32 @@
     	<!-- Pricing -->
     	<div class="about-box">	
     		<h1 class="public-hdr">{{"arenella-homepage-title-pricing" | translate }}</h1>
+    		<div class="mobile-only-element">
+    			<h5>{{"arenella-homepage-title-pricing-plan-credit-name" | translate }}</h5>
+    			<p>{{"arenella-homepage-title-pricing-plan-credit-desc" | translate }}</p>
+    		</div>
+    		<div class="mobile-only-element">
+    			<h5>{{"arenella-homepage-title-pricing-plan-paid-name" | translate }}</h5>
+    			<p>{{"arenella-homepage-title-pricing-plan-paid-desc" | translate }}</p>
+    		</div>
     		<table>
     			<thead>
     				<tr>
     					<th>{{"arenella-homepage-title-pricing-plan-name" | translate }}</th>
     					<th>{{"arenella-homepage-title-pricing-plan-cost" | translate }}</th>
-    					<th>{{"arenella-homepage-title-pricing-plan-description" | translate }}</th>
+    					<th class="non-mobile-only-element">{{"arenella-homepage-title-pricing-plan-description" | translate }}</th>
     				</tr>
     			</thead>
     			<tbody>
     				<tr>
     					<td>{{"arenella-homepage-title-pricing-plan-credit-name" | translate }}</td>
-    					<td>{{"arenella-homepage-title-pricing-plan-credit-price" | translate }}</td>
-    					<td>{{"arenella-homepage-title-pricing-plan-credit-desc" | translate }}</td>
+    					<td class="td-desc-text">{{"arenella-homepage-title-pricing-plan-credit-price" | translate }}</td>
+    					<td class="non-mobile-only-element">{{"arenella-homepage-title-pricing-plan-credit-desc" | translate }}</td>
     				</tr>
     				<tr>
     					<td>{{"arenella-homepage-title-pricing-plan-paid-name" | translate }}</td>
-    					<td>{{"arenella-homepage-title-pricing-plan-paid-price" | translate }}</td>
-    					<td>{{"arenella-homepage-title-pricing-plan-paid-desc" | translate }}</td>
+    					<td class="td-desc-text">{{"arenella-homepage-title-pricing-plan-paid-price" | translate }}</td>
+    					<td class="non-mobile-only-element">{{"arenella-homepage-title-pricing-plan-paid-desc" | translate }}</td>
     				</tr>
     			</tbody>
     		</table>
