--- a/recruit-gui/src/app/recruiter-signup/recruiter-signup.component.html
+++ b/recruit-gui/src/app/recruiter-signup/recruiter-signup.component.html
@@ -45,7 +45,7 @@
 								<tr>
 									<td colspan="2" style="max-width:400px; padding-top:10px; font-style:italic; font-size:12px;">{{'arenella-recruiter-signup-agree' | translate}}</td>
 								</tr>
-								<tr>
+								<tr class="non-mobile-only-element">
 									<td></td>
 									<td>
 										<div class="action-buttons">
@@ -53,7 +53,14 @@
 										</div>
 									</td>
 								</tr>
+								
+								
 							</table>
+							<div class="mobile-only-element">
+								<div class="action-buttons">
+									<button (click)="startFreeTrial()" [disabled]="isFreeTrialButtonEnabled()" class="btn btn-secondary arenella-btn">{{'arenella-recruiter-signup-btn-start-trial' | translate}}</button>
+								</div>
+							</div>
 						</form>
 					</div>
 					
