--- a/recruit-gui/src/app/new-candidate/new-candidate.component.css
+++ b/recruit-gui/src/app/new-candidate/new-candidate.component.css
@@ -82,7 +82,7 @@
 	margin:2px;
  	padding:5px;
  	border-radius:5px;
- 	background:grey;
+ 	background:green;
  	display:inline-block;
  }
  
@@ -101,7 +101,6 @@
 
  .hdr-label{
  	font-weight:bold;
- 	width:250px;
  }
  
  .show-row{
@@ -125,6 +124,7 @@
 input{
 	max-width:50%;
 	min-width:25%;
+	min-width: 180px;
 }
  
  .button-panel-mobile{
@@ -199,56 +199,19 @@ input{
 	opacity:0.25;
 }
 
-@media (max-width: 700px) {
-	.arenella-btn-popup-action {
-	    width: 100%;
-	}
-	
-	input{
-		width:100%;
-		max-width:100%;
-	}
- 
-	select{
-		width:100%;
-		max-width:100%;
-	}
-	
-	.new-candidate-lang{
-		width:100%;
-	}
-
-	.new-candidate-lang-name{
-		width:50%;
-	}
-
-	.new-candidate-lang-options{
-		width:50%;
-	}
-	
-	.function-selectable{
-		float:left;
-		border-radius: 0.25rem;
-		margin:5px;
-		background:#6a5acd;
-		color:white;
-		padding:5px;
-		width:200px;	
-		cursor:pointer;
-		text-align:center;
-	}
-	
-	.industry-selectable{
-		float:left;
-		border-radius: 0.25rem;
-		margin:5px;
-		background:#6a5acd;
-		color:white;
-		padding:5px;
-		width:200px;	
-		cursor:pointer;
-		text-align:center;
-	}
-
+.collapse-options{
+	margin-left:5px;
+	color:#6A5ACD;
+	font-weight:bold;
+	cursor:pointer;
 }
- 
+
+textarea{
+	width:100%;
+	height:350px;
+}
+
+.selected-skills{
+	min-height:35px;
+	margin-bottom:10px;
+}
