--- a/recruit-gui/src/app/recruiter-profile/recruiter-profile.component.html
+++ b/recruit-gui/src/app/recruiter-profile/recruiter-profile.component.html
@@ -261,7 +261,7 @@
 				<br>
 			</div>
 			<textarea formControlName="message"></textarea>
-			<button class="btn btn-secondary arenella-btn" (click)="sendMessageToRecruiter()">{{'arenella-recruiter-prof-box-contact-btn-send' | translate}}</button>
+			<button class="btn btn-secondary arenella-btn contact-button" (click)="sendMessageToRecruiter()">{{'arenella-recruiter-prof-box-contact-btn-send' | translate}}</button>
 		</form>	
 	</div>
 	<div class="modal-body message-send-success" *ngIf="contactRecruiterView === 'success'">
