--- a/recruit-gui/src/app/candidate-info-box/candidate-info-box.component-mob.css
+++ b/recruit-gui/src/app/candidate-info-box/candidate-info-box.component-mob.css
@@ -22,4 +22,18 @@
 		padding-bottom: 20px;
 	}
 	
+	.contact-button {
+    	background: grey;
+	}
+	
+	.contact-button {
+		color:white;
+		background:darkgrey;
+	}
+	
+	.contact-button:hover {
+		background:grey;
+		cursor:pointer
+	}
+	
 }
