--- a/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.css
+++ b/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.css
@@ -1,4 +1,5 @@
 .tabNav{
+	color:darkgrey;
 	cursor:pointer;
 }
 
@@ -308,7 +309,6 @@ td{
 	text-align:left;
 	padding-left:100px;
 }
-
 
 @media (max-width:700px)  {
 
