--- a/recruit-gui/src/app/contact/contact.component.html
+++ b/recruit-gui/src/app/contact/contact.component.html
@@ -15,7 +15,7 @@
 			</tr>
 			<tr>
 				<th>{{ "arenella-contact-company-address" | translate }}</th>
-				<td>Julianastraat 16, Noordwijk 2202KD, Nederland</td>
+				<td>Julianastraat 16, Noordwijk 2202KD Nederland</td>
 			</tr>
 			<tr>
 				<th>{{ "arenella-contact-company-registration-number" | translate }}</th>
@@ -45,7 +45,7 @@
 			
 			<div>
 				<h5>{{ "arenella-contact-company-registration-email" | translate }}</h5>
-				<p>admin&#64;arenella-ict.com-ICT</p>
+				<p>admin&#64;arenella-ict.com</p>
 			</div>
 		
 		</div> 
