small layout changes

--- a/recruit-gui/src/app/contact/contact.component.html
+++ b/recruit-gui/src/app/contact/contact.component.html
@@ -11,7 +11,7 @@
 		  <table class="non-mobile-only-element">
 			<tr>
 				<th>{{ "arenella-contact-company-name" | translate }}</th>
-				<td>Arrenella-ICT</td>
+				<td>Arrenella BV</td>
 			</tr>
 			<tr>
 				<th>{{ "arenella-contact-company-address" | translate }}</th>
@@ -30,7 +30,7 @@
 		<div class="mobile-only-element contact-table">
 			<div>
 				<h5>{{ "arenella-contact-company-name" | translate }}</h5>
-				<p>Arrenella-ICT</p>
+				<p>Arrenella BV</p>
 			</div>
 			
 			<div>
