--- a/recruit-gui/src/app/statistics/statistics.component-mob.css
+++ b/recruit-gui/src/app/statistics/statistics.component-mob.css
@@ -20,6 +20,7 @@
 	.stat-canvas{
 		width:99%;
 		min-width:0%;
+		margin-bottom:0px;
 		
 	}
 
@@ -30,11 +31,12 @@
 	
 	canvas{
 		width:100%;
-		height:300px;
+		height:230px;
 	}
 	
 	h3{
 		text-align:center;
+		margin-bottom:10px;
 	}
 	
 	.chart-wrapper{
@@ -43,5 +45,9 @@
 	
 	.searchSelectedUser{
 		background:grey;
+	}
+	
+	.statChartTotalHdr{
+		width:100%;
 	}
 }
