--- a/recruit-gui/src/app/statistics/statistics.component.css
+++ b/recruit-gui/src/app/statistics/statistics.component.css
@@ -196,6 +196,11 @@ END
     text-align: center;
 }
 
+canvas{
+	width:100%;
+	height:400px;
+}
+
 @media (max-width:700px)  {
 	
 	.stat-canvas{
@@ -212,12 +217,8 @@ END
 		width:90%;
 	}
 	
-	.statChartTotalHdr{
-		display:inline-block;
-		width:200px;
-	}
 	
-		.geo-code-filter{
+	.geo-code-filter{
 		width:100%;	
 	}
 	
