small extractor updates and UI changes

--- a/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.html
+++ b/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.html
@@ -21,7 +21,7 @@
 								<span title="{{listing.listingId}}" class="flag-icon flag-icon-{{getCountryISO2Code(listing.country)}} suggestion-flag-country listing-country"></span>
 							</div>
 							<div class="listing-views" title="views">
-								{{listing.views}}
+								{{'arenella-recruiter-listing-views' | translate}}: {{listing.views}}
 							</div>
 							<div>
 								<a href="{{listing.listingId}}"></a>
