split of project managers and architects

--- a/recruit-gui/src/app/suggestions/suggestions.component-mob.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component-mob.css
@@ -35,4 +35,11 @@
 		background:#dee2e6;
 		color:#002549;
 	}
+	
+	.suggestion-extract-btn{
+		width:90%;
+		background: #dee2e6;
+        color: black;
+	}
+	
 }
