--- a/recruit-gui/src/app/suggestions/suggestions.component.html
+++ b/recruit-gui/src/app/suggestions/suggestions.component.html
@@ -92,7 +92,7 @@
 				</textarea>
 				<br><br>
 					<button class="btn btn-secondary suggestion-extract-btn" (click)="doReset()">{{'arenella-suggestions-btn-reset' | translate}}</button>
-					<button class="btn btn-secondary" (click)="extractFiltersFromJobSpecText()">{{'arenella-suggestions-box-spec-extraction' | translate}}</button>
+					<button class="btn btn-secondary suggestion-extract-btn" (click)="extractFiltersFromJobSpecText()">{{'arenella-suggestions-box-spec-extraction' | translate}}</button>
 				<br><br>
 				<br><br>
 			</form>
